ncc/testsuite/negative/try.n
class M {
  static f () : int {
    try {
      1
    } catch { _ : System.Exception =>
      "foo" };    // E: try...with body has type .*
  }
      
  static g () : int { try { 1 } finally { "foo" } } // E: try...finally handler was expected to have type void
}

class E : System.Exception {
  public this() {}
}

class M1 {
  static g () : void { throw E () }        // OK
  static f () : void { throw 3 }        // E: raised value was expected to have type
}
